<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0D0D0F">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mis Comunidades"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#1E1E1E"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        tools:ignore="HardcodedText">

    </TextView>

    <ImageButton
        android:id="@+id/comunidad1"
        android:layout_width="70dp"
        android:layout_height="90dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/img_10"
        android:contentDescription="TODO">

    </ImageButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/inter"
        android:textStyle="normal"
        android:textSize="10sp"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:text="amo el cafe">

    </TextView>


    <ImageButton
        android:id="@+id/programacion"
        android:layout_width="70dp"
        android:layout_height="90dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="180dp"
        android:src="@drawable/img_11"
        android:contentDescription="TODO">

    </ImageButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:layout_marginStart="145dp"
        android:fontFamily="@font/inter"
        android:textStyle="normal"
        android:textSize="10sp"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:text="programacion">

    </TextView>

    <ImageButton

        android:layout_width="70dp"
        android:layout_height="90dp"
        android:layout_marginStart="265dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/img_12"
        android:contentDescription="TODO">

    </ImageButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="292dp"
        android:layout_marginStart="285dp"
        android:fontFamily="@font/inter"
        android:textStyle="normal"
        android:textSize="10sp"
        android:textColor="#ffffff"
        android:gravity="center_horizontal"
        android:text="Juegos">

    </TextView>


    <View
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:background="#D9D9D9"
        android:layout_alignParentTop="true">

    </View>

    <TextView
        android:layout_width="200dp"
        android:layout_height="38dp"
        android:fontFamily="@font/inter"
        android:textStyle="normal"
        android:textSize="18sp"
        android:textColor="#1e1e1e"
        android:letterSpacing="0.1"
        android:gravity="center_horizontal"
        android:layout_marginStart="9dp"
        android:layout_marginTop="15dp"
        android:text="@string/mis_comunidades" />


    <Button
        android:id="@+id/favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favoritos"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:backgroundTint="#0D0D0F"
        android:layout_below="@id/top_bar"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp">

    </Button>

    <Button
        android:id="@+id/pendientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="|     Pendiente de aceptación"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:backgroundTint="#0D0D0F"
        android:layout_below="@id/top_bar"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp">

    </Button>


    <TextView
        android:id="@+id/discubrir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Descubrir comunidades"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginVertical="68dp"
        android:layout_above="@+id/create_community">

    </TextView>

    <TextView
        android:id="@+id/create_community"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_mi_comunidad"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="80dp"
        android:layout_alignParentBottom="true">

    </TextView>

    <View
        android:layout_width="136dp"
        android:layout_height="150dp"
        android:layout_marginStart="276dp"
        android:layout_marginTop="495dp"
        android:background="@drawable/img_13">

    </View>

    <View
        android:layout_width="136dp"
        android:layout_height="150dp"
        android:layout_marginStart="276dp"
        android:layout_marginTop="588dp"
        android:background="@drawable/img_13">

    </View>

    <View
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="695dp"
        android:layout_marginStart="165dp"
        android:background="@drawable/img_14">

    </View>


</RelativeLayout>
